@@ -1,27 +1,0 @@
-# $NetBSD: Makefile,v 1.108 2023/10/24 22:11:07 wiz Exp $
-
-PKGREVISION= 18
-.include "../../sysutils/cdrdao/Makefile.common"
-
-PKGNAME=	gcdmaster-${CDRDAO_VER}
-COMMENT=	Gnome UI frontend to cdrdao
-
-DEPENDS+=	cdrdao-${CDRDAO_VER}{,nb*}:../../sysutils/cdrdao
-
-WRKSRC=		${WRKDIR}/cdrdao-${CDRDAO_VER}
-
-CONFIGURE_ARGS+=	--without-posix-threads
-CONFIGURE_ARGS+=	--with-gcdmaster
-INSTALLATION_DIRS=	bin ${PKGMANDIR}/man1 share/applications share/pixmaps
-USE_LANGUAGES+=		c++11
-USE_TOOLS+=		pkg-config
-INSTALL_DIRS=		gcdmaster
-GCONF_SCHEMAS=		gcdmaster.schemas
-
-.include "../../devel/libsigc++/buildlink3.mk"
-.include "../../x11/gtkmm/buildlink3.mk"
-.include "../../devel/libgnomeuimm/buildlink3.mk"
-.include "../../sysutils/desktop-file-utils/desktopdb.mk"
-.include "../../databases/shared-mime-info/mimedb.mk"
-.include "../../devel/GConf/schemas.mk"
-.include "../../mk/bsd.pkg.mk"
