@@ -1,13 +1,0 @@
-@comment $NetBSD: PLIST,v 1.10 2009/11/22 21:06:20 drochner Exp $
-bin/gcdmaster
-man/man1/gcdmaster.1
-share/application-registry/gcdmaster.applications
-share/applications/gcdmaster.desktop
-share/gcdmaster/glade/Preferences.glade
-share/gcdmaster/glade/ProjectChooser.glade
-share/gconf/schemas/gcdmaster.schemas
-share/mime-info/gcdmaster.keys
-share/mime-info/gcdmaster.mime
-share/mime/packages/gcdmaster.xml
-share/pixmaps/gcdmaster-doc.png
-share/pixmaps/gcdmaster.png
